<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">


    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="button 1" />


    <EditText
        android:id="@+id/content_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter here" />


    <TextView
        android:id="@+id/content1_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Message from activity 1"
        android:text="Activity 2 Says: " />


    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="button 3"
        android:visibility="gone" />

    <EditText
        android:id="@+id/edit_name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"

        />


    <LinearLayout
        android:id="@+id/fragment_container_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"

        ></LinearLayout>


</LinearLayout>
