<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BlankFragment"
    android:orientation="horizontal"
    >

<!--
    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="byebye"
        android:padding="5dp"
        android:layout_weight="0.5"
        />-->
        <TextView
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="5dp"
            />

</LinearLayout>