<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <EditText
        android:id="@+id/content_edit2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Enter here"
        android:text="button 2" />

    <TextView
        android:id="@+id/content2_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Message from activity 2"
        android:text="Activity 1 Says: " />

</LinearLayout>
